@@ -914,7 +914,7 @@ INSERT INTO typetest2 (id, ts1, ts2, ts3) VALUES (
 SELECT * FROM typetest2 ORDER BY id;
  id |             ts1              |           ts2            |    ts3     
 ----+------------------------------+--------------------------+------------
-  1 | Wed Jul 31 17:00:00 2002 PDT | Thu Aug 01 01:00:00 2002 | 08-01-2002
+  1 | Wed Jul 31 17:00:00 2002 PDT | Wed Jul 31 17:00:00 2002 | 07-31-2002
   2 | Wed Dec 30 16:00:00 2020 PST | Thu Dec 31 00:00:00 2020 | 12-31-2020
 (2 rows)
 
@@ -928,7 +928,7 @@ INSERT INTO typetest2 (id, ts1, ts2, ts3) VALUES (
 SELECT * FROM typetest2 ORDER BY id;
  id |             ts1              |           ts2            |    ts3     
 ----+------------------------------+--------------------------+------------
-  1 | Thu Aug 01 05:30:00 2002 IST | Thu Aug 01 01:00:00 2002 | 08-01-2002
+  1 | Thu Aug 01 05:30:00 2002 IST | Wed Jul 31 17:00:00 2002 | 07-31-2002
   2 | Thu Dec 31 05:30:00 2020 IST | Thu Dec 31 00:00:00 2020 | 12-31-2020
   3 | Thu Dec 31 05:30:00 2020 IST | Thu Dec 31 00:00:00 2020 | 12-31-2020
 (3 rows)
