@@ -13,6 +13,8 @@ Version 2.6.0
     Report and diagnosis by "jopoly".
   - Don't free() strings in the environment.
     This could lead to crashes and unpredictable behavior.
+  - Set the Oracle session time zone from the PostgreSQL session time zone.
+    That makes TIMESTAMP WITH LOCAL TIME ZONE translate correctly.
 
   Enhancements:
   - Skip Oracle savepoint management if the foreign server option
